# ChangeLog for dev-lang/python
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.507 2010/12/14 01:35:03 jer Exp $

  14 Dec 2010; Jeroen Roovers <jer@gentoo.org> python-2.6.6-r1.ebuild:
  Stable for HPPA (bug #342927).

  07 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  python-2.6.6-r1.ebuild:
  x86 stable wrt bug #342927

  06 Dec 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  python-2.6.5-r3.ebuild, python-3.1.2-r4.ebuild:
  Non-maintainer commit.
  Reverting commit that broke stage generation - bug 347867.

  01 Dec 2010; <sping@gentoo.org> python-2.4.6.ebuild, python-2.5.4-r4.ebuild,
  python-2.6.5-r3.ebuild, python-2.6.6-r1.ebuild, python-2.7.ebuild,
  python-2.7.1.ebuild, python-3.1.2-r4.ebuild, python-3.1.3.ebuild:
  Save/restore active Python version across calls to pkg_postrm() of the ebuild
  about to be replaced. Ensure /usr/bin/python symlink.

  29 Nov 2010; <sping@gentoo.org> python-2.7.1.ebuild, python-3.1.3.ebuild:
  Remove eselect_python_update() from 2.7.1 and 3.1.3

*python-3.1.3 (28 Nov 2010)
*python-2.7.1 (28 Nov 2010)

  28 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-2.7.1.ebuild, +python-3.1.3.ebuild:
  Version bumps. 2.7: Enable loadable sqlite extensions (bug #335505).

  27 Nov 2010; Sebastian Pipping <sping@gentoo.org> python-2.4.6.ebuild,
  python-2.5.4-r4.ebuild, python-2.6.5-r3.ebuild, python-2.6.6-r1.ebuild,
  python-2.7.ebuild, python-3.1.2-r4.ebuild:
  Disable auto-bumping of active Python version by removing
  eselect_python_update() and its invocation as explained and announced on
  gentoo-dev

  27 Oct 2010; Dirkjan Ochtman <djc@gentoo.org> -python-2.6.4-r1.ebuild,
  -python-2.6.5-r2.ebuild, -python-3.1.2-r3.ebuild:
  Remove old versions.

  27 Oct 2010; Dirkjan Ochtman <djc@gentoo.org> python-2.6.6-r1.ebuild:
  Disable test___all__ to fix bug 321075.
