@@ -92,11 +92,11 @@ DIST python-gentoo-patches-2.6.5-r4.tar.bz2 68611 RMD160 63a67a772df32dcf1977c10
 DIST python-gentoo-patches-2.7.1.tar.bz2 12322 RMD160 1599db60aae9ba58c43371d241f98cb876f2a25b SHA1 f9bedb43dd687f3a2078cb6325b04f56303d54ce SHA256 7937071d083a06c1196b794ed03c76c0448de2e16d975dec7c25b36cf9162784
 DIST python-gentoo-patches-2.7.tar.bz2 11803 RMD160 a4bef5c904859f530f6cf5009ac60d171c34af00 SHA1 06b3f6077febed0aa807cb81cd689215efc430c6 SHA256 c72446007ab1b4dd0d8702b0901a8b5e8eadb1ce6872e7f99e12f4eb97874b0f
 DIST python-gentoo-patches-3.1.2-r6.tar.bz2 1285912 RMD160 a525679255b2dcb0a65d00792a8c247742e94923 SHA1 7ab91a40074f33b08b805b2cce54dc32c1f596b1 SHA256 45a4368f537b2d92ead296dd600207313a20a8027dcaeaa2a0c71dcf8ecb9899
-EBUILD python-2.4.6.ebuild 11582 RMD160 19b0463670f628f22d4cee76268724562aa09ce9 SHA1 652f24caea139d208a39015275b600192313bee0 SHA256 4b55398f495c961bb8f0a30c3284382dbe8fc143bfddb64831bbfc035756e1e9
-EBUILD python-2.5.4-r4.ebuild 13027 RMD160 9ae3c9259d305be637de5a231a90a750963de33a SHA1 f88e0790aeb54c671fc196ce4419505e5f1c7785 SHA256 9838c189f52b98cd6ff948847d2b572e91ae2039bfc17650a9b44d3cca7e4b39
+EBUILD python-2.4.6.ebuild 10758 RMD160 a9df2cb1be027a15475c6053c29eaeab4566f60c SHA1 6325d122b9822953e98d45d253f86e16f69c6666 SHA256 b6cf453863ac53564a3cd9e60650e8b9f85f844aa400554e6da4748888a133f3
+EBUILD python-2.5.4-r4.ebuild 12203 RMD160 aafdf324c2a240e0460aaeb191f352413d8ec2a0 SHA1 da31d18f3386163b45a0376558c1b821208a4ee7 SHA256 85573ac7edfd227ec558e6d5e1a4babfb241f31feb9e1283e9869cd46f4a46d9
 EBUILD python-2.6.5-r2.ebuild 19557 RMD160 af048bb93a31184d8e35d168ce10f1a5dcc5d535 SHA1 01ddb4dca3a800f4811f624ac7d12461035e1f01 SHA256 95cc1c08d2f01c803f847468517b3a7f6b0ec126bcc951fb975e14272937ebcf
 EBUILD python-2.7.1-r00.1.ebuild 21917 RMD160 86c40222f59157c60d7a3548b3380dd6ddaa50bc SHA1 07d8db0499d22cc075738963630b96e4b68b0677 SHA256 da7e1ec918c8b9e6b75a07ff63d8a3f7e25a1df38c1cb7490b1ab594c0b790d0
-EBUILD python-2.7.ebuild 20123 RMD160 1708b3bcd523adb67b3e7e48ea21aab718d2a8b3 SHA1 56ab6a79761b6aca402197445b174be166d43574 SHA256 c69f7dd241861e5e989bbd6e62f49f3a6b2ec3016283e4520ab1b1f63f2a6166
+EBUILD python-2.7.ebuild 19299 RMD160 7ea0deccf7d76415d5675a38433a79290351c2ee SHA1 51ed78347851a0d410f02069ddcc1ad1de851f27 SHA256 8bf74a6ab22c1f45784d213ddca8ad222102d1725fda71a175ebf3e182360422
 EBUILD python-3.1.2-r4.ebuild 18799 RMD160 f0655fb04955f75dd2d6b32186299bf2dc8f3649 SHA1 f82a7aca28db542681b687de359c4dd2f83b576f SHA256 d5c96a02157021a96a94049cb0b3c8a06db2cf6bba3d4bdb26a65f22cfd70f4d
-MISC ChangeLog 90437 RMD160 bc6f982e88c4daa30bf4f3724f9d8c7210942c4b SHA1 cc213d3c5836946ecfcc93d903897cab40f13257 SHA256 a02baa682d7163cded5accdc225c0e443a1ef7a593bfefb3a03c134dd0460a38
+MISC ChangeLog 90666 RMD160 dd715bc4d1069c6a573bbd7a607c267f02735317 SHA1 fd7e0e1d5c92bd77c1cd421dd1791406dcbcf152 SHA256 71a06120552a6288f7c3ebf2983169ba0b0be6c71a013ea0fd549191fdac6fe2
 MISC metadata.xml 661 RMD160 54831d16b8807086bfabdbb3df9d33336b5d42a0 SHA1 9867c337fe9e6f4e967004fc9409763e0fedf43b SHA256 2c6c3407251f7ccd6501dee49494e539a9544f2fbae99a4373eefdf4e83e8908
