@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.507 2010/12/14 01:35:03 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.508 2010/12/16 16:14:40 neurogeek Exp $
+
+  16 Dec 2010; Jesus Rivero <neurogeek@gentoo.org> python-2.4.6.ebuild,
+  python-2.5.4-r4.ebuild, python-2.7.ebuild, python-2.7.1.ebuild,
+  python-3.1.3.ebuild:
+  Reverting commit that broke stage generation - bug 347867.
 
   14 Dec 2010; Jeroen Roovers <jer@gentoo.org> python-2.6.6-r1.ebuild:
   Stable for HPPA (bug #342927).
